# kNN_MOF_cp

./: .gitignore  README.md
data/: README_data.md  cp.csv  cp_series.csv  cp_series.txt  global_para.txt  gp.txt  rr_daily.txt  rr_obs_daily.csv
scr/: CMakeLists.txt  Func_Initialize.c  Func_Initialize.h  Func_dataIO.c  Func_dataIO.h  Func_kNN_MOF_cp.c  Func_kNN_MOF_cp.h  Makefile  def_struct.h  func_IO_data.c  func_date.c  main.c  main_dis.c  multiple_runs.R  test.c  test2.c  test_df_rr_h.c  validate.R
